[tool.poetry]
name = "repl_python3_beta_MobileNotableFiles"
version = "0.1.0"
description = ""
authors = ["Dakota_3 <binkmanbinkman@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
Faker = "^9.3.1"
functions = "^0.7.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
